styles.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

.navbar {
  position: sticky;
  top: 0;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  background-color: black;
  width: 100%;
  align-items: center;
  color: white;
  border-bottom: 3px white solid;
  padding-left: 5%;
  padding-right: 5%;
}

.navbar strong {
  font-size: 2rem;
}

.navbar ul {
  display: flex;
  flex-wrap: wrap;
  list-style: none;
  padding: 0;
  margin: 0;
  gap: 50px;
}

.navbar a:hover {
  color: #88c0d0;
  background-color: #2e3440;
}

.navbutton {
  background-color: gray;
  border: none;
  color: white;
  padding: 10px 20px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 1.1rem;
  margin: 4px 2px;
  cursor: pointer;
  border-radius: 5px;
  transition: all 0.4s;
}

.hero {
  background-color: #88c0d0;
  text-align: center;
  font-size: 1.2rem;
  padding: 30px;
  flex: 1;
}

.hero p {
  padding: 30px;
}

.hero img {
  border-radius: 10px;
  max-width: 50%;
}

.projects {
  padding: 30px;
  background-color: #81a1c1;
  flex: 1;
}

.projects h1 {
  text-align: center;
  padding-bottom: 30px;
}

.projects ul {
  display: flex;
  flex-wrap: wrap;
  list-style: none;
  justify-content: space-evenly;
}

.projects li {
  border-radius: 10px;
  overflow: hidden;
  box-shadow: 0 5px 10px;
  background-color: #8fbcbb;
  max-width: 25%;
}

.projects h2 {
  text-align: center;
  padding-top: 10px;
}

.projects p {
  padding: 10px;
  text-align: center;
}

.projects img{
  width: 100%;
}

.contact {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  padding: 20px;
  background-color: #2e3440;
}

.contact a {
  text-decoration: none;
  padding: 10px;
  color: white;
  transition: all 0.4s;
}

.contact a:hover {
  color: #2e3440;
  background-color: #81a1c1;
  border-radius: 8px;
}

